--- a/Changes
+++ b/Changes
@@ -1,7 +1,7 @@
 Revision history for Perl extension Plack-Middleware-StackTrace-RethrowFriendly
 
 {{$NEXT}}
-
+    - Trace the original error even if the last one is not the same as the previous one
 0.01 2015-03-12T11:10:39Z
     - original version
 
